<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiwii Remote</string>
    <string name="action_settings">Settings</string>
    <string name="aux1">AUX1</string>
    <string name="aux2">AUX2</string>
    <string name="aux3">AUX3</string>
    <string name="aux4">AUX4</string>
    <string name="connectionStatus">Status</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="switchModeBtn">Mode</string>
    <string name="menu">Menu</string>
    <style name="SpinnerStyle" parent="@android:style/Widget.Spinner">   
    <item name="android:background">@android:drawable/btn_default</item>            
 </style>   
    <string name="signal_strength">Signal Strength</string>   
    <string name="phone_heading">Phone Heading</string>
    
</resources>
